--- a/views/products.ejs
+++ b/views/products.ejs
@@ -32,7 +32,8 @@
         <input type="submit" value="Add product to cart" />
       </div>
 
-      <a href="/carts/my_cart">My cart</a>
+      <a href="/carts/my_cart">My cart</a> <br>
+      <a href="/orders/create_order">Place Order</a> <br>
       <a href="/users/login">To start shopping Login here</a>
     </form>
   </body>
