--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,9 @@
     <h1>Dashboard</h1>
     <h4>Hello <%= userName %></h4>
 
-    <a href="/create_cart">Continue Shopping</a> <br>
+    <a href="/select_products">Continue Shopping</a> <br>
+
+    <a href="/orders/my_orders">My Orders</a> <br>
     
     <a href="/users/logout">Logout</a> 
   
